# jeopardy

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  next.config.js  package.json  pyproject.toml
api-jpd/: Dockerfile  example.env  pyproject.toml
api-jpd/src/: alembic.ini  application.py  constants.py  lifespan.py  main.py
api-jpd/src/api/: __init__.py
api-jpd/src/api/v1/: __init__.py  category.py  lobby.py  prompt.py  user.py
api-jpd/src/auth/: __init__.py  auth.py  password.py  scheme.py
api-jpd/src/configs/: __init__.py  logging_settings.py  settings.py
api-jpd/src/enums/: game.py  lobby.py  player.py  prompt.py
api-jpd/src/errors/: auth.py  base.py  handlers.py  request.py  storage.py  validation.py
api-jpd/src/migrations/: env.py  scripts.py
api-jpd/src/migrations/versions/: 0001_2025-10-18_create_core_tables.py  0002_2025-10-28_add_state_to_lobby.py
api-jpd/src/models/: __init__.py  base.py  category.py  lobby.py  lobby_category.py  mixins.py  prompt.py  user.py
api-jpd/src/repositories/: __init__.py  category.py  game.py  lobby.py  mixins.py  prompt.py  user.py
api-jpd/src/schemas/: base.py  game.py  player.py  storage.py  token.py
api-jpd/src/schemas/category/: base.py  nested.py
api-jpd/src/schemas/game_event/: connect.py  error.py  start.py
api-jpd/src/schemas/lobby/: base.py  nested.py
api-jpd/src/schemas/lobby_category/: base.py  nested.py
api-jpd/src/schemas/prompt/: base.py  nested.py
api-jpd/src/schemas/user/: base.py  nested.py
api-jpd/src/services/: __init__.py  category.py  dependencies.py  game.py  lobby.py  prompt.py  user.py
api-jpd/src/storages/: __init__.py  dependencies.py  redis.py  relational_db.py
api-jpd/src/utils/: validation.py
api-jpd/src/websocket/: __init__.py  manager.py  server.py
api-jpd/src/websocket/namespaces/: __init__.py  game.py
api-jpd/tests/: conftest.py
api-jpd/tests/fixtures/: app_fixtures.py
api-jpd/tests/test_routes/: test_internal_routes.py
backend/: .env
backend/app/api/: server.py
backend/app/api/dependencies/: auth.py  category.py  database.py  lobby.py  player.py  question.py
backend/app/api/routes/: __init__.py  categories.py  lobbies.py  lobby.py  players.py  questions.py  users.py
backend/app/core/: config.py
backend/app/db/: tasks.py
backend/app/db/repositories/: __init__.py  categories.py  lobbies.py  players.py  questions.py  users.py
backend/app/models/: category.py  core.py  lobby.py  player.py  question.py  token.py  user.py
backend/app/services/: __init__.py  authentication.py  convert_utils.py
backend/tests/: conftest.py  test_categories.py  test_lobbies.py  test_players.py  test_questions.py  test_users.py
deploy/: docker-compose.yml  local.env
deployment/local/: docker-compose.yml
src/: alembic.ini  application.py  jeopardy_db  lifespan.py  main.py  manage.py  settings.py
src/api/: __init__.py  internal.py
src/api/v1/: __init__.py  category.py  lobby.py  preset.py  prompt.py  user.py
src/app/: page.tsx
src/auth/: __init__.py  auth_utils.py  scheme.py
src/dals/: __init__.py  category_dal.py  lobby_dal.py  preset_dal.py  prompt_dal.py  user_dal.py
src/jlib/: __init__.py
src/jlib/auth/: __init__.py
src/jlib/dals/: __init__.py  category_dal.py  lobby_dal.py  preset_dal.py  prompt_dal.py  relational_dal.py  user_dal.py
src/jlib/db/: __init__.py  manager.py  utilities.py
src/jlib/enums/: __init__.py  app_environment.py  game.py  prompt.py
src/jlib/errors/: __init__.py  auth.py  base.py  database.py  game_flow.py  handlers.py  request.py  resource.py  schema.py
src/jlib/redis/: __init__.py  client.py  manager.py  server.py
src/jlib/schemas/: base.py  category.py  error.py  lobby.py  message.py  pagination.py  player.py  preset.py  prompt.py  user.py
src/jlib/services/: __init__.py  base_service.py  flow_service.py  lobby_service.py  preset_service.py  question_service.py  user_service.py
src/jlib/types/: __init__.py  database.py  prompt.py  schemas.py
src/jlib/utils/: app.py  auth.py  pagination.py  permission.py  response.py  validation.py
src/jlib/ws/: __init__.py  manager.py  utilities.py
src/migrations/: env.py
src/migrations/versions/: 0001_2025-02-24_14-20_.py  0001_2025-03-11_22-11_.py  0001_2025-03-11_22-11_create_user_category_prompt_tables.py  0002_2025-03-12_23-50_create_preset_table.py
src/models/: __init__.py  base.py  category.py  preset.py  preset_category.py  prompt.py  user.py
src/scripts/: migrations.py  path_utils.py
src/scripts/mock_data/: __init__.py  categories.py  presets.py  users.py
src/scripts/mock_data/prompts/: __init__.py  commands.py  prompts_for_countries_category.py  prompts_for_movies_category.py  prompts_for_space_category.py
src/services/: __init__.py  auth_service.py  flow_service.py  lobby_service.py  preset_service.py  question_service.py  user_service.py
tests/: conftest.py
tests/fixtures/: app_fixtures.py  data_fixtures.py  factory_fixtures.py  model_fixtures.py  request_fixtures.py  websocket_fixtures.py
tests/test_game_flow/: test_answer_question.py  test_game_start.py  test_play.py  test_rate_answer.py  test_select_player.py  test_select_question.py
tests/test_routes/: test_category_routes.py  test_internal_routes.py  test_lobby_routes.py  test_preset_routes.py  test_prompt_routes.py  test_user_routes.py
web-jpd/: eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
web-jpd/src/: App.tsx  main.tsx  router.tsx  settings.ts
web-jpd/src/api/: client.ts  socket.ts
web-jpd/src/components/: ConfirmationModal.tsx
web-jpd/src/features/auth/: AuthContext.tsx  ProtectedRoute.tsx  interfaces.ts
web-jpd/src/features/auth/components/: Login.tsx
web-jpd/src/features/category/: interfaces.ts
web-jpd/src/features/category/components/: PromptItem.tsx  (+5 more)
web-jpd/src/features/game/: interfaces.ts
web-jpd/src/features/lobby/: interfaces.ts
web-jpd/src/pages/: Game.tsx  Home.tsx  SocketTest.tsx
web-jpd/src/shared/: enums.ts  interfaces.ts
web-jpd/tests/: App.test.tsx
(+6 files in other folders)
