[project]
name = "jeopardy"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.11",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "pytz>=2025.1",
    "sqlalchemy[asyncio]>=2.0.38",
    "typer>=0.15.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.9.9",
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
# Ignore unused imports in all __init__.py files
"**/__init__.py" = ["F401"]
# Ignore undefined name in **/models for model declarations in SQLAlchemy relationships.
"**/models/*" = ["F821"]