[project]
name = "jeopardy"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.11",
    "orjson>=3.10.15",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "pytz>=2025.1",
    "sqlalchemy[asyncio]>=2.0.38",
    "typer>=0.15.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "httpx>=0.28.1",
    "pre-commit>=4.1.0",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-env>=1.1.5",
    "ruff>=0.9.9",
]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "--log-cli-level=INFO"
asyncio_mode="auto"
asyncio_default_fixture_loop_scope = "session"

[tool.pytest_env]
JEOPARDY_APP_ENVIRONMENT = "test"
JEOPARDY_DB_DRIVER = "sqlite+aiosqlite"
JEOPARDY_DB_HOST = "null"
JEOPARDY_DB_PORT = "null"
JEOPARDY_DB_USER = "null"
JEOPARDY_DB_PASS = "null"
JEOPARDY_DB_NAME = ":memory:"
JEOPARDY_DB_ISOLATION_LEVEL = "SERIALIZABLE"
JEOPARDY_DB_ECHO = "false"

[tool.coverage.report]
fail_under = 80

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
# Ignore unused imports in all __init__.py files
"**/__init__.py" = ["F401"]
# Ignore undefined name in **/models for model declarations in SQLAlchemy relationships.
"**/models/*" = ["F821"]
